force-app/main/default/objects/Local__c/Local__c.object-meta.xml
<CustomObject>
    <label>Local</label>
    <nameField>
        <label>Local</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>