force-app/main/default/objects/Local__c/fields/Abastecimento__c.field-meta.xml
<CustomField>
    <fullName>Abastecimento__c</fullName>
    <description>Tipo de Abastecimento disponíveis no Local</description>
    <inlineHelpText>Tipo de Abastecimento disponíveis no Local</inlineHelpText>
    <label>Abastecimento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QAV</fullName>
            </value>
            <value>
                <fullName>AVGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>