force-app/main/default/objects/Local__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define se o local cadastro é uma base onde uma ou mais equipes operam.</description>
    <inlineHelpText>Define se o local cadastro é uma base onde uma ou mais equipes operam.</inlineHelpText>
    <label>É Base</label>
    <type>Checkbox</type>
</CustomField>