force-app/main/default/objects/Local__c/fields/BaseOperacional__c.field-meta.xml
<CustomField>
    <fullName>BaseOperacional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Operacional</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Locais</relationshipLabel>
    <relationshipName>BaseOperacionais</relationshipName>
    <type>Lookup</type>
</CustomField>