force-app/main/default/objects/Local__c/fields/CalcularTraves__c.field-meta.xml
<CustomField>
    <fullName>CalcularTraves__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calcular Través</label>
    <type>Checkbox</type>
</CustomField>