force-app/main/default/objects/Local__c/fields/CapacidadeMaxima__c.field-meta.xml
<CustomField>
    <fullName>CapacidadeMaxima__c</fullName>
    <description>Capacidade Máxima de peso suportada pelo helideck</description>
    <inlineHelpText>Maximum weight capacity supported by the helideck</inlineHelpText>
    <label>Capacidade Máxima (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>