force-app/main/default/objects/Local__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Modelo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>FPSO</fullName>
            </value>
            <value>
                <fullName>FSO</fullName>
            </value>
            <value>
                <fullName>Plataforma</fullName>
            </value>
            <value>
                <fullName>Sonda</fullName>
            </value>
            <value>
                <fullName>UMS</fullName>
            </value>
            <value>
                <fullName>Sísmica</fullName>
            </value>
            <value>
                <fullName>PLSV</fullName>
            </value>
            <value>
                <fullName>Clareira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>