force-app/main/default/objects/Local__c/fields/CategoriaDecolagem__c.field-meta.xml
<CustomField>
    <fullName>CategoriaDecolagem__c</fullName>
    <label>Categoria da decolagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>categoriaDecolagem</valueSetName>
    </valueSet>
</CustomField>