force-app/main/default/objects/Local__c/fields/CategoriaUnidade__c.field-meta.xml
<CustomField>
    <fullName>CategoriaUnidade__c</fullName>
    <label>Categoria da unidade</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAT 1</fullName>
            </value>
            <value>
                <fullName>CAT 2</fullName>
            </value>
            <value>
                <fullName>CAT 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>