force-app/main/default/objects/Local__c/fields/CIAD__c.field-meta.xml
<CustomField>
    <fullName>CIAD__c</fullName>
    <externalId>true</externalId>
    <label>CIAD</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>