force-app/main/default/objects/Local__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referência para um cliente caso este local seja de uso específico dele</description>
    <inlineHelpText>Referência para um cliente caso este local seja de uso específico dele</inlineHelpText>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locais</relationshipLabel>
    <relationshipName>Locais</relationshipName>
    <type>Lookup</type>
</CustomField>