force-app/main/default/objects/Local__c/fields/CodigoANAC__c.field-meta.xml
<CustomField>
    <fullName>CodigoANAC__c</fullName>
    <label>Codigo ANAC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>