force-app/main/default/objects/Local__c/fields/CodigoICAO__c.field-meta.xml
<CustomField>
    <fullName>CodigoICAO__c</fullName>
    <description>Código ICAO da estação meteorológica mais próxima</description>
    <inlineHelpText>Código ICAO da estação meteorológica mais próxima</inlineHelpText>
    <label>Estação meteorológica</label>
    <length>10</length>
    <type>Text</type>
</CustomField>