force-app/main/default/objects/Local__c/fields/CodigoLocal__c.field-meta.xml
<CustomField>
    <fullName>CodigoLocal__c</fullName>
    <description>Código que identifica o local</description>
    <externalId>true</externalId>
    <inlineHelpText>Código que identifica o local</inlineHelpText>
    <label>Código do local</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>