force-app/main/default/objects/Local__c/fields/ConfirmacaoCadastro__c.field-meta.xml
<CustomField>
    <fullName>ConfirmacaoCadastro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmação de cadastro</label>
    <type>Checkbox</type>
</CustomField>