force-app/main/default/objects/Local__c/fields/Coordenadas__c.field-meta.xml
<CustomField>
    <fullName>Coordenadas__c</fullName>
    <description>Latitude e longitude que indicam a posição de um local</description>
    <inlineHelpText>Latitude e longitude que indicam a posição de um local</inlineHelpText>
    <label>Coordenadas</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>