force-app/main/default/objects/Local__c/fields/CoordenadasLatitudeDirecao__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeDirecao__c</fullName>
    <label>Coordenadas Latitude - Direção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DirecaoLatitude</valueSetName>
    </valueSet>
</CustomField>