force-app/main/default/objects/Local__c/fields/CoordenadasLatitudeGraus__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeGraus__c</fullName>
    <label>Coordenadas Latitude - Graus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>