force-app/main/default/objects/Local__c/fields/CoordenadasLatitudeMinutos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeMinutos__c</fullName>
    <label>Coordenadas Latitude - Minutos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>