force-app/main/default/objects/Local__c/fields/CoordenadasLatitudeSegundos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLatitudeSegundos__c</fullName>
    <label>Coordenadas Latitude - Segundos</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>