force-app/main/default/objects/Local__c/fields/CoordenadasLongitudeDirecao__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeDirecao__c</fullName>
    <label>Coordenadas Longitude - Direção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DirecaoLongitude</valueSetName>
    </valueSet>
</CustomField>