force-app/main/default/objects/Local__c/fields/CoordenadasLongitudeGraus__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeGraus__c</fullName>
    <label>Coordenadas Longitude - Graus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>