force-app/main/default/objects/Local__c/fields/CoordenadasLongitudeMinutos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeMinutos__c</fullName>
    <label>Coordenadas Longitude - Minutos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>