force-app/main/default/objects/Local__c/fields/CoordenadasLongitudeSegundos__c.field-meta.xml
<CustomField>
    <fullName>CoordenadasLongitudeSegundos__c</fullName>
    <label>Coordenadas Longitude - Segundos</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>