force-app/main/default/objects/Local__c/fields/DataDeclinacaoMagnetica__c.field-meta.xml
<CustomField>
    <fullName>DataDeclinacaoMagnetica__c</fullName>
    <label>Data de atualização da declinação magnet</label>
    <type>DateTime</type>
</CustomField>