force-app/main/default/objects/Local__c/fields/DeclinacaoMagnetica__c.field-meta.xml
<CustomField>
    <fullName>DeclinacaoMagnetica__c</fullName>
    <label>Declinação magnética</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>