force-app/main/default/objects/Local__c/fields/DirecoesAcesso__c.field-meta.xml
<CustomField>
    <fullName>DirecoesAcesso__c</fullName>
    <label>Direções de Acesso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>