force-app/main/default/objects/Local__c/fields/DistanciaPontoSuporte__c.field-meta.xml
<CustomField>
    <fullName>DistanciaPontoSuporte__c</fullName>
    <formula>IF(ISNULL(PontoSuporte__c),0,DISTANCE(PontoSuporte__r.Coordenadas__c,Coordenadas__c,&apos;km&apos;)/1.852)</formula>
    <label>Distancia do Ponto de Suporte (nm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>