force-app/main/default/objects/Local__c/fields/DistritoHeliponto__c.field-meta.xml
<CustomField>
    <fullName>DistritoHeliponto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distrito do Heliponto</label>
    <referenceTo>DistritoHelipontos__c</referenceTo>
    <relationshipLabel>Locais</relationshipLabel>
    <relationshipName>Locais</relationshipName>
    <type>Lookup</type>
</CustomField>