force-app/main/default/objects/Local__c/fields/Emailcoordenacao__c.field-meta.xml
<CustomField>
    <fullName>Emailcoordenacao__c</fullName>
    <label>Email coordenação</label>
    <type>Email</type>
</CustomField>