force-app/main/default/objects/Local__c/fields/EstacoesMetereologicasAdicionais__c.field-meta.xml
<CustomField>
    <fullName>EstacoesMetereologicasAdicionais__c</fullName>
    <label>Estações metereológicas adicionais</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EstacaoMeteorologica</valueSetName>
    </valueSet>
</CustomField>