force-app/main/default/objects/Local__c/fields/Foto__c.field-meta.xml
<CustomField>
    <fullName>Foto__c</fullName>
    <label>Foto</label>
    <type>Url</type>
</CustomField>