force-app/main/default/objects/Local__c/fields/InstrucoesAcesso__c.field-meta.xml
<CustomField>
    <fullName>InstrucoesAcesso__c</fullName>
    <label>Instruções de Acesso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>