force-app/main/default/objects/Local__c/fields/Locacao__c.field-meta.xml
<CustomField>
    <fullName>Locacao__c</fullName>
    <description>Nome da locação do local</description>
    <inlineHelpText>Nome da locação do local</inlineHelpText>
    <label>Locação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>