force-app/main/default/objects/Local__c/fields/Magnetica__c.field-meta.xml
<CustomField>
    <fullName>Magnetica__c</fullName>
    <label>Magnética</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>