force-app/main/default/objects/Local__c/fields/Mobilidade__c.field-meta.xml
<CustomField>
    <fullName>Mobilidade__c</fullName>
    <description>Definição da característica de mobilidade do local.</description>
    <inlineHelpText>Definir se o local é fixo ou móvel</inlineHelpText>
    <label>Mobilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixo</fullName>
            </value>
            <value>
                <fullName>Móvel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>