force-app/main/default/objects/Local__c/fields/NotificacaoNovoLocal__c.field-meta.xml
<CustomField>
    <fullName>NotificacaoNovoLocal__c</fullName>
    <defaultValue>&quot;Um novo local foi criado. Favor cadastrar aerovias.&quot;</defaultValue>
    <description>Campo utilizado na notificação de novo local (process builder)</description>
    <label>Notificação Novo Local</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>