force-app/main/default/objects/Local__c/fields/Operacional__c.field-meta.xml
<CustomField>
    <fullName>Operacional__c</fullName>
    <defaultValue>true</defaultValue>
    <description>O local se encontra ou não operacional</description>
    <inlineHelpText>O local se encontra ou não operacional</inlineHelpText>
    <label>Operacional</label>
    <type>Checkbox</type>
</CustomField>