force-app/main/default/objects/Local__c/fields/PontoSuporte__c.field-meta.xml
<CustomField>
    <fullName>PontoSuporte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ponto de apoio</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Locais (Ponto de Suporte)</relationshipLabel>
    <relationshipName>LocaisPontoSuporte</relationshipName>
    <type>Lookup</type>
</CustomField>