force-app/main/default/objects/Local__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status para validação de um local</description>
    <inlineHelpText>Status para validação de um local</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatusPendenteAprovado</valueSetName>
    </valueSet>
</CustomField>