force-app/main/default/objects/Local__c/fields/Tamanho__c.field-meta.xml
<CustomField>
    <fullName>Tamanho__c</fullName>
    <description>Tamanho do helideck em metros</description>
    <inlineHelpText>Tamanho do helideck em metros</inlineHelpText>
    <label>Tamanho (m)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>