force-app/main/default/objects/Local__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Tokelau Time (Pacific/Fakaofo)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Tonga Standard Time (Pacific/Tongatapu)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) New Zealand Standard Time (Antarctica/McMurdo)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Anadyr Standard Time (Asia/Anadyr)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Standard Time (Asia/Kamchatka)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Fiji Standard Time (Pacific/Fiji)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Tuvalu Time (Pacific/Funafuti)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Marshall Islands Time (Pacific/Majuro)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Nauru Time (Pacific/Nauru)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Gilbert Islands Time (Pacific/Tarawa)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Wake Island Time (Pacific/Wake)</fullName>
            </value>
            <value>
                <fullName>(GMT+12:00) Wallis &amp;amp; Futuna Time (Pacific/Wallis)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Magadan Standard Time (Asia/Magadan)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Sakhalin Standard Time (Asia/Sakhalin)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Magadan Standard Time (Asia/Srednekolymsk)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Bougainville Standard Time (Pacific/Bougainville)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Vanuatu Standard Time (Pacific/Efate)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Kosrae Time (Pacific/Kosrae)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Norfolk Island Standard Time (Pacific/Norfolk)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) New Caledonia Standard Time (Pacific/Noumea)</fullName>
            </value>
            <value>
                <fullName>(GMT+11:00) Ponape Time (Pacific/Ponape)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Dumont-d’Urville Time (Antarctica/DumontDUrville)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Australian Eastern Standard Time (Antarctica/Macquarie)</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Vladivostok Standard Time (Asia/Ust-Nera)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>