force-app/main/default/objects/Local__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Define se o local é em terra(onshore) ou em mar(offshore)</description>
    <inlineHelpText>Define se o local é em terra(onshore) ou em mar(offshore)</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onshore</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>