force-app/main/default/objects/Local__c/fields/TipoWaypoint__c.field-meta.xml
<CustomField>
    <fullName>TipoWaypoint__c</fullName>
    <label>Tipo de Waypoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoWaypoint</valueSetName>
    </valueSet>
</CustomField>