force-app/main/default/objects/Local__c/fields/ValidadeHomologacao__c.field-meta.xml
<CustomField>
    <fullName>ValidadeHomologacao__c</fullName>
    <label>Validade da homologação</label>
    <type>Date</type>
</CustomField>