force-app/main/default/objects/Local__c/fields/VHF__c.field-meta.xml
<CustomField>
    <fullName>VHF__c</fullName>
    <label>VHF</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>