force-app/main/default/objects/Local__c/recordTypes/Waypoint.recordType-meta.xml
<RecordType>
    <fullName>Waypoint</fullName>
    <active>true</active>
    <label>Waypoint</label>
</RecordType>