force-app/main/default/objects/Local__c/validationRules/MagneticaDeveSerPositiva.validationRule-meta.xml
<ValidationRule>
    <fullName>MagneticaDeveSerPositiva</fullName>
    <active>true</active>
    <errorConditionFormula>Magnetica__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Magnetica__c</errorDisplayField>
    <errorMessage>Magnetica não pode ser negativa.</errorMessage>
</ValidationRule>