force-app/main/default/objects/Local__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cliente__c</columns>
    <columns>NAME</columns>
    <columns>Categoria__c</columns>
    <columns>Mobilidade__c</columns>
    <columns>CodigoLocal__c</columns>
    <columns>Coordenadas__Latitude__s</columns>
    <columns>Coordenadas__Longitude__s</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CodigoICAO__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>