force-app/main/default/objects/Local__c/listViews/AlteracaoCoordenadas_Local.listView-meta.xml
<ListView>
    <fullName>AlteracaoCoordenadas_Local</fullName>
    <filterScope>Queue</filterScope>
    <label>Alteração de Coordenadas</label>
    <queue>AlteracaoCoordenadas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>